# StoryTeller-TTS

./: Makefile  README.md  README.vi.md  README_PYPI.md  config.yaml  pyproject.toml  pyproject.toml.cpu  requirements.txt  requirements_xpu.txt  run_xpu.bat  setup_xpu_uv.bat
apps/: __init__.py  gradio_main.py  gradio_xpu.py  web_stream.py
client/: client.html
docker/: Dockerfile.gpu  Dockerfile.serve  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml
docs/: CUSTOM_MODEL_USAGE.md  Deploy.md  Deploy.vi.md  makefile_usage.md  makefile_usage.vi.md
examples/: __init__.py  main.py  main_remote.py
examples/audio_ref/: example.txt  example_2.txt  example_3.txt  example_4.txt
finetune/: README.md  create_voices_json.py  finetune_VieNeu-TTS.ipynb  merge_lora.py  train.py
finetune/configs/: lora_config.py
finetune/data_scripts/: encode_data.py  filter_data.py  get_hf_sample.py
finetune/dataset/: metadata.csv
src/vieneu/: __init__.py  base.py  core_xpu.py  factory.py  fast.py  remote.py  serve.py  standard.py  utils.py
src/vieneu/assets/: voices.json
src/vieneu/assets/samples/: Bình (nam miền Bắc).pt  Bình (nam miền Bắc).txt  Ly (nữ miền Bắc).pt  Ly (nữ miền Bắc).txt  Ngọc (nữ miền Bắc).pt  Ngọc (nữ miền Bắc).txt  Tuyên (nam miền Bắc).pt  Tuyên (nam miền Bắc).txt  Vĩnh (nam miền Nam).pt  Vĩnh (nam miền Nam).txt  Đoan (nữ miền Nam).pt  Đoan (nữ miền Nam).txt
src/vieneu_utils/: core_utils.py  normalize_text.py  phonemize_text.py
src/vieneu_utils/cleaner/: __init__.py  datestime.py  num2vi.py  numerical.py  symbols.py  text_norm.py
tests/: README.md  benchmark.py  test_audio_utils.py  test_core_utils.py  test_normalize.py  test_phonemize.py  test_results.txt  test_tts_classes.py
